<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="ch.bbbaden.choreapp.signin.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/QRFragment"
        android:name="ch.bbbaden.choreapp.signin.QRFragment"
        android:label="@string/qr_code"
        tools:layout="@layout/fragment_qr" />
    <fragment
        android:id="@+id/signUpFragment"
        android:name="ch.bbbaden.choreapp.signin.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_sign_up" />
</navigation>